--- a/2장 테스트/2.1 ~ 2.6.md
+++ b/2장 테스트/2.1 ~ 2.6.md
@@ -1,1 +1,620 @@
-1
+# 2.1 UserDaoTEST 다시 보기
+
+## 2.1.1 테스트의 유용성
+
+> 테스트는 내가 예상하고 의도했던 대로 코드가 정확인 동작하는를 확인해서, 만든 코드를 확신할 수 있게 해주는 작업이다. 이를 통해 코드의 결함을 제거해가는 작업, 일명 디버깅을 거치게 되고, 최종적으로 테스트가 성공하면 모든 결함이 제거됐다는 확신을 얻을 수 있다.
+
+## 2.1.2 UserDaoTest의 특징
+
+```jsx
+public class UserDaoTest {
+    public static void main(String[] args) throws ClassNotFoundException, SQLException{
+        ApplicationContext context = new GenericXmlApplicationContext("/applicationContext.xml");
+        
+				UserDao dao = context.getBean("userDao", UserDao.class);
+
+        User user = new User();
+        user.setId("whiteship");
+        user.setName("백기선");
+        user.setPassword("married");
+
+        dao.add(user);
+
+        System.out.println(user.getId() + "등록 성공");
+
+        User user2 = dao.get(user.getId());
+        System.out.println(user2.getName());
+        System.out.println(user2.getPassword());
+
+        System.out.println(user2.getId() + "조회 성공");
+    }
+}
+```
+
+이 테스트 방법에서 가장 돋보이는 건, main() 메소드를 이용해 쉽게 테스트 수행을 가능하게 했다는 점과 테스트할 대상인 UserDao를 직접 호출해서 사용한다는 점이다. 
+
+### 웹을 통한 DAO 테스트 방법의 문제점
+
+- DAO뿐만 아니라 서비스 클래스, 컨트롤러, JSP 뷰 등 모른 레이어의 기능을 다 만들고 테스트가 가능하다.
+- 하나의 테스트를 수행하는 데 참여하는 클래스와 코드가 너무 많다 ⇒ 어디에서 문제가 발생했는지를 찾아야 하는 수고가 필요해진다.
+- 테스트용 웹 애플리케이션을 만들었다고 하더라도,  DAO에서 문제가 아닌 웹 애플리케이션에서 문제가 발생한다면 이를 찾기 어렵다.
+
+### 작은 단위의 테스트
+
+- 테스트하고자 하는 대상이 명확하면 그 대상에만 집중해서 테스트하는 것이 바람직하다.
+- 한꺼번에 많은 것을 몰아서 테스트하면 테스트 수행 과정도 복잡해지고, 정확한 원인을 찾기 힘들어진다. ⇒ 따라서 테스트는 가능하면 작은 단위로 쪼개서 집중해서 할 수 있어야 한다.
+
+- UserDaoTest는 한 가지 관심에 집중할 수 있게 작은 단위로 만들어진 테스트다.
+- UserDaoTest의 테스트를 수행할 때는 웹 인터페이스나, 그것을 위한 MVC 클래스, 서비스 오브젝트 등이 필요 없고, 서버에 배포할 필요도 없다.
+- 작은 단위의 코드에 대해 테스트를 수행한 것을 **단위 테스트**라고 한다.
+- 단위의 크기와 범위가 어느정도인지 딱 정해진 것은 아니다 ⇒ 하나의 관심에 집중해서 효율적으로 테스트할 만한 범위의 단위
+- 단위 테스트를 하는 이유 ⇒ 개발자가 설계하고 만든 코드가 원래 의도한 대로 동작하는지를 개발자 스스로 빨리 확인하기 위해서
+
+### 자동수행 테스트 코드
+
+- UserDaoTest의 특징 ⇒ 테스트할 데이터가 코드를 통해 제공되고, 테스트 작업 역시 코드를 통해 자동으로 실행한다. ( **테스트는 자동으로 수행되도록 만드는 것이 중요** )
+- 애플리케이션을 구성하는 클래스 안에 테스트 코드를 포함시키는 것보다는 별도로 테스트용 클래스를 만들어서 테스트 코드를 넣는 편이 낫다.
+
+## 2.1.3 UserDaoTest의 문제점
+
+### 수동 확인 작업의 번거로움
+
+- 테스트 수행은 코드에 의해 자동으로 진행되긴 하지만 테스트의 결과를 확인하는 일은 사람의 책임이므로 완전히 자동으로 테스트되는 방법이라고 말할 수가 없다.
+
+### 실행 작업의 번거로움
+
+- 아무리 간단히 실행 가능한 main( ) 메소드라고 하더라도 매번하기에는 번거롭다. 더 체계적으로 테스트를 실행하고 그결과를 확인하는 방법이 필요하다.
+
+# 2.2 UserDaoTest의 개선
+
+## 2.2.1 테스트 검증의 자동화
+
+테스트 결과는 성공과 실패를 가질수있다. 실패는 테스트가 진행되는 동안에 에러가 발생해서 실패하는 경우와 테스트 작업 중에 에러가 발생하지 않았지만 그 결과가 기대한 것과 다르게 나오는 경우로 구분해볼 수 있다. 전자를 테스트에러, 후자를 테스트실패로 구분.
+
+```jsx
+	
+		  if (!user.getName().equals(user2.getName())) {
+        System.out.println("테스트 실패 (name)");
+    } else if (!user.getPassword().equals(user2.getPassword())) {
+        System.out.println("테스트 실패 (password)");
+    } else {
+        System.out.println("조회 테스트 성공");
+		}
+```
+
+add( )에 전달한 User 오브젝트와 get( )을 통해 가져오는 User 오브젝트의 값을 비교해서 일치하는지 확인하고 다르면 테스트 실패, 모든 비교가 성공적으로 끝나면 테스트 성공이라고 메세지 출력
+
+## 2.2.2 테스트의 효율적인 수행과 결과 관리
+
+main( ) 메소드로 만든 테스트는 테스트로서 필요한 기능은 모두 갖췄지만 좀 더 편리하게 테스트를 수행하고 편리하게 결과를 확인하려면 단순한 main( ) 메소드로는 한계가 있다.
+
+프로그래머를 위한 자바 테스팅 프레임워크라고 불리는 JUnit은 자바로 단위 테스트를 만들 때 유용
+
+### JUnit 테스트로 전환
+
+개발자가 만든 클래스의 오브젝트를 생성하고 실행하는 일은 프레임워크에 의해 진행된다. 따라서 프레임워크에서 동작하는 코드는 main()메소드도 필요없고 오브젝트를 만들어서 실행시키는 코드를 만들 필요도 없다.
+
+### 테스트 메소드 전환
+
+테스트가 main( ) 메소드로 만들어졌다는 것은 제어권을 직접 갖는다는 의미이기 때문에 main( ) 메소드에 있던 테스트 코드를 일반 메소드로 옮겨야 한다.
+
+Junit 프레임워크가 요구하는 조건 첫 번째, 메소드가 public으로 선언돼야 하는것, 두번째, @Test 애노테이션을 붙여주는 것
+
+main( ) 대신에 일반 메소드로 만들고 의도가 무엇인지 알 수 있는 적절한 이름을 붙여준다.
+
+**public 액세스 권한을 주는 것이 중요**
+
+### 검증 코드 전환
+
+`if (!user.getName( ).equals(user2.getName())) { ... }`
+
+위의 if 문장을 Junit이 제공하는 방법을 이용해 전환할 수 있다.
+
+`assertThat(user2.getPassword( ), is(user.getPassword()));`
+
+assertTaht( ) 메소드는 첫 번째 파라미터의 값을 뒤에 나오는 매처라고 불리는 조건으로 일치하면 다음으로 넘어가고, 아니면 테스트가 실패하도록 만들어준다.
+
+is( ) 는 매처의 일종으로 equals()로 비교해주는 기능을 가졌다.
+
+### JUnit 테스트 실행
+
+JUnit 프레임 워크도 자바 코드로 만들어진 프로그램이므로 어디선가 한 번은 JUnit 프레임워크를 시작시켜 줘야 하기 때문에 main( ) 메소드를 하나 추가하고, 그 안에 JUnitCore 클래스의 main 메소드를 호출해주는 간단한 코드를 넣어준다.
+
+# 2.3 개발자를 위한 테스팅 프레임워크 JUnit
+
+## 2.3.1 JUnit 테스트 실행 방법
+
+JUnitCore를 이용해 테스트를 실행하고 콘솔에 출력된 메시지를 보고 결과를 확인하는 방법은 가장 간단하긴 하지만 테스트의 수가 많이지면 관리하기 힘들다는 단점이 있다.
+
+가장 좋은 JUnit 테스트 실행 방법은 자바 IDE에 내장된 JUnit 테스트 지원 도구를 사용하는 것이다.
+
+## 2.3.2 테스트 결과의 일관성
+
+테스트를 실행하면서 가장 불편한 일은, 매번 UserDaoTest 테스트를 실행하기 전에 DB의 USER 테이블 데이터를 모두 삭제해줘야 한다는 것이다. 이 문제를 해결하기 위해 addAndGet( ) 테스트를 마치고 나면 테스트가 등록한 사용자 정보를 삭제해서, 테스트를 수행하기 이전 상태로 만들어 주는 것이다.
+
+### deleteAll( )의 getCount( )
+
+일관성 있는 결과를 보장하는 테스트를 만들기 위해 UserDao에 새로운 기능을 추가해 준다.
+
+- deleteAll
+
+`첫 번째 추가할 것은 deleteAll( ) 메소드로, USER 테이블의 모든 레코드를 삭제해주는 간단한 기능이 있다.`
+
+- getCount( )
+
+`두번째 추가할 것은 getCount( ) 메소드로, USER 테이블의 레코드 개수를 돌려준다.`
+
+### deleteAll( )과 getCount( )의 테스트
+
+새로운 기능을 추가했으니, 추가된 기능에 대한 테스트도 만들어야한다.
+
+하지만 deleteAll( )과 getCount( ) 메소드의 기능은 add( )와 get( )처럼 독립적으로 자동 실행되는 테스트를 만들기가 애매하기 때문에 기존에 만든 addAndGet( ) 테스트를 확장하는 방법을 사용한다.
+
+## 2.3.3 포괄적인 테스트
+
+### getCount( ) 테스트
+
+더 꼼꼼한 테스트를 만들기 위해 여러 개의 User를 등록해가면서 getCount( )의 결과를 확인한다.
+
+테스트 메소드는 한 번에 한 가지 검증 목적에만 충실한 것이 좋기 때문에 getCount( )를 위한 새로운 테스트 메소드를 만든다. JUnit은 하나의 클래스 안에 여러 개의 테스트 메소드가 들어가는 것을 허용한다. @Test가 붙어 있고 public 접근자가 있으면 리턴 값이 void형이고 파라미터가 없다는 조건을 지키기만 하면 된다.
+
+테스트 시나리오는 먼저 USER 테이블의 데이터를 모두 지우고 getCount( )로 레코드 개수가 0임을 확인한다. 그리고 3개의 사용자 정보를 하나씩 추가하면서 매번 getCount( )의 결과를 하나씩 증가하는지 확인하는 것이다.
+
+### addAndGet( ) 테스트 보완
+
+get( )이 파라미터로 주어진 id에 해당하는 사용자를 가져온 것인지, 그냥 하무거나 가져온 것인지 테스트에서 검증하지는 못한다. 그렇기 때문에 get( ) 메소드에 대한 테스트 기능을 좀 더 보완할 필요가 있다. User를 하나 더 추가해서 두 개의 User를 add( ) 하고, 각 User의 id를 파라미터로 전달해서 get( )을 실하하도록 만든다. 이렇게 하면 주어진 id에 해당하는 정확한 User 정보를 가져오는지 확인할 수 있다.
+
+### get( ) 예외조건에 대한 테스트
+
+get()메소드에 id값이 사용자 정보가 없다면 어떻게 될까? null값을 반환하는것과 id값을 찾을 수없다는 예외를 던지는것이 있다. 여기서는 후자의 방법을 해보자.
+
+일단 스프링의EmptyResultDataAccessException 예외를 이용하겠다.
+
+하지만 일반적으로 테스트 중에 예외가 던져지면 테스트 메소드의 실행은 중단되고 테스트는 실패한다. 이는 검증 실패는 아니고 테스트 에러라고 볼 수 있다.
+
+그런데 이번에는 반대로 테스트 진행 중에 특정 예외가 던져지면 테스트가 성공한 것이고, 예외가 던져지지 않고 정상적으로 작업을 마치면 테스트가 실패했다고 판단해야 한다. 문제는 예외 발생 여부는 메소드를 실행해서 리턴 값을 비교하는 방법으로 확인할 수 없다는 점이다. 즉 assertThat( ) 메소드로는 검증이 불가능하다.
+
+바로 이런 경우를 위해 JUnit은 예외조건 테스트를 위한 특별한 방법을 제공해준다.
+
+그것은 @Test 애노테이션의 expected 엘리먼트이다. expected는 테스트 메소드 실행 중에 발생하리라 기대하는 예외 클래스를 넣어주면 된다.
+
+@Test에 expected를 추가해놓으면 보통의 테스트와는 반대로, 정상적으로 테스트 메소드를 마치면 테스트가 실패하고, expected에서 지정한 예외가 던져지면 테스트가 성공한다.
+
+예외가 반드시 발생해야 하는 경우를 테스트하고 싶을 때 유용하게 쓸 수 있다.
+
+### 테스트를 성공시키기 위한 코드의 수정
+
+테스트가 성공하도록 get( ) 메소드 코드를 수정한다. 주어진 id에 해당하는 데이터가 없으면 EmptyResultDataAccessException을 던지는 get( )를 활용한다.
+
+```jsx
+public class UserDao {
+    public User get(String id) throws SQLException {
+        // ...
+
+        // User는 null로 초기
+        User user = null;
+
+        // 쿼리 결과가 있을 경우만 User 오브젝트 생성 후 값을 넣어준다.
+        if (rs.next()) {
+            user = new User();
+            user.setId(rs.getString("ID"));
+            user.setName(rs.getString("NAME"));
+            user.setPassword(rs.getString("PASSWORD"));
+        }
+
+        // ...
+
+        // 결과가 없다면 User는 계속 null일 것이다.
+        if (user == null) {
+            // 예외를 던져준다.
+            throw new EmptyResultDataAccessException(1);
+        }
+
+        return user;
+    }
+}
+```
+
+세 개의 테스트는 모두 성공할 것이다. 새로 추가한 기능도 정상적으로 동작하고, 기존의 기능에도 영향을 주지 않았다는 확신을 얻을 수 있다.
+
+## 2.3.4 테스트가 이끄는 개발
+
+### 기능설계를 위한 테스트
+
+1. '존재하지않는 id로 get( ) 메소드를 실행하면 특정한 예외가 던져져야한다'는 식으로 만들어야 할 기능을 결정
+2. UserDao 코드를 수정하는 대신 getUserFailure( ) 테스트를 먼저 만든다. ( 만들어진 코드를 보고 어떻게 테스트할까라고 생각하면서 getUserFailure( )를 만든 것이 아니라, 추가하고 싶은 기능을 코드로 표현하려고 했기 때문에 가능)
+
+[getUserFailure( ) 테스트 코드에 나타난 기능](https://www.notion.so/946cb41a584346389f7233d97bc01b6c)
+
+테스트 코드는 마치 하나의 기능 정의서와 같다.
+
+- 테스트가 실패하면 설계한 대로 코드가 작성되지 않았음을 알 수 있음
+- 코드를 수정하고 테스트를 수행하는 과정을 반복한다.
+- 테스트가 성공한다면 코드 구현과 테스트라는 두 가지 작업이 동시에 끝난다.
+
+### 테스트 주도 개발
+
+> 만들고자 하는 기능의 내용을 담고 있으면서 만들어진 코드를 검증해 줄 수 있도록 테스트 코드를 먼저 작성하고, 테스트를 성공하게 해주는 코드를 작성하는 방식의 개발 방법을 **테스트 주도 개발( TDD )**이라고 한다. 또는 테스트를 코드보다 먼저 작성한다고 해서 **테스트 우선 개발**이라고도 한다.
+
+TDD의 기본 원칙 - ''실패한 테스트를 성공시키기 위한 목적이 아닌 코드는 만들지 않는다.''
+
+TDD는 개발자가 테스트를 만드렁 가며 개발하는 방법이 주는 장점을 극대화한 방법
+
+**TDD의 장점**
+
+- 테스트를 빼먹지 않고 꼼꼼하게 만들어 낼 수 있다.
+- 테스트를 작성하는 시간과 애플리케이션 코드를 작성하는 시간의 간격이 짧아진다.
+- 자연스럽게 단위 테스트를 만들 수 있다.
+- 머릿속에서 진행되는 시뮬레이션을 코드로 작성한다.
+
+## 2.3.5 테스트 코드 개선
+
+테스트 코드도 리팩토링이 필요하다.
+
+- context와 dao를 가져오는 부분이 반복되고 있다.
+- 중복된 코드는 메소드로 분리하는 것이 가장 손쉬운 방법이다.
+- 테스트의 경우, JUnit이 제공하는 기능을 사용할 수도 있다.
+
+### @Before
+
+@Before 애노테이션을 사용하면 테스트 실행 전 준비작업을 분리할 수 있다.
+
+- 중복됐던 코드를 setUp()이라는 메소드에 넣고, 중복된 코드는 제거한다.
+- dao는 로컬 변수였으므로 인스턴스 변수로 바꾸어준다.
+
+```jsx
+public class UserDaoTest {
+    private UserDao dao;
+
+    @Before
+    public void setUp() {
+        ApplicationContext context = new GenericXmlApplicationContext("/applicationContext.xml");
+        this.dao = context.getBean("userDao", UserDao.class);
+    }
+
+    @Test
+    public void addAndGet() throws SQLException {         // ...
+    }
+
+    @Test
+    public void count() throws SQLException {
+        // ...
+    }
+
+    @Test(expected=EmptyResultDataAccessException.class)
+    public void getUserFailure() throws SQLException {
+        // ...
+    }
+}
+```
+
+**JUnit의 테스트 실행 과정**
+
+1. 테스트 클래스에서 @Test가 붙어있는 public void 형의 파라미터가 없는 테스트 메소드를 모두 찾는다.
+2. 테스트 클래스의 오브젝트를 하나 만든다.
+3. @Before가 붙은 메소드를 먼저 실행한다.
+4. @Test가 붙은 메소드를 하나 호출하고 테스트 결과를 저장한다.
+5. @After가 붙은 메소드를 실행한다.
+6. 2~5를 반복한다.
+7. 모든 테스트 결과를 종합해서 돌려준다.
+
+**@Before/@After**
+
+- 자동으로 실행되므로 메소드를 직접 호출할 필요가 없다.
+- 직접 호출하지 않으므로 인스턴스 변수를 이용해야 한다.
+
+**JUnit의 테스트 클래스 오브젝트는 매번 새로 만들어진다.**
+
+- 각 테스트가 서로 영향을 주지 않고 독립적으로 실행됨을 보장
+- 따라서 인스턴스 변수도 부담없이 사용할 수 있다.
+
+**테스트 메소드 일부에서만 사용(중복)되는 코드가 있다면?**
+
+- Before이 아닌 새로운 메소드로 분리하여 직접 호출하는 것이 낫다.
+- 혹은 공통적인 특징을 지닌 테스트 메소드를 모아 별도의 테스트 클래스로 만들수도 있다.
+
+### 픽스처
+
+> 테스트를 수행하는 데 필요한 정보나 오브젝트를 픽스처라고 한다. 일반적으로 픽스쳐는 여러 테스트에서 반복적으로 사용되기 때문에 @Befor 메소드를 이용해서 만들어두면 편리하다.
+
+# 2.4 스프링 테스트 적용
+
+애플리케이션 컨텍스트 생성 방식
+
+- @Before 메소드가 테스드 메소드 개수만큼 반복
+- 반복될 때마다 애플리케이션 컨텍스트가 만들어짐
+- 애플리케이션 컨텍스트 생성 시 모든 싱글톤 빈 오브젝트를 초기화하므로 제법 많은 시간을 필요로 함
+
+테스트는 가능한 독립적으로 매번 새로운 오브젝트를 사용하는 것이 원칙
+
+- 애플리케이션 컨텍스트처럼 시간과 자원이 많이 소모되는 경우 테스트 전체가 공유하는 오브젝트를 만들기도 함
+- 다만, 이 때도 테스트는 일관성이 있어야하며, 테스트 순서에 영향을 받지 말아야한다.
+- 애플리케이션 컨텍스트의 경우 초기화되고 나면 내부 상태가 변경되는 일이 거의 없으므로 무관함
+
+문제는 JUnit이 매번 테스트 클래스의 오브젝트를 새로 생성함. 여러 테스트가 함께 참조할 애플리케이션 컨텍스트를 오브젝트 레벨에 저장해두면 곤란
+
+1. 스태틱 필드에 저장 ( JUnit은 @BeforeClass 스태틱 메소드를 지원 )
+2. 스프링이 제공하는 애플리케이션 컨텍스트 테스트 지원 기능 ( 이 방법이 더 편리 )
+
+## 2.4.1 테스트를 위한 애플리케이션 컨텍스트 관리
+
+스프링은 JUnit을 이용하는 테스트 컨텍스트 프레임워크 제공, 테스트 컨텍스트의 지원을 받으면 간단한 애노테이션 설정만으로 테스트에서 필요로 하는 애플리케이션 컨텍스트를 만들어서 모든 테스트가 공유하게 할 수 있다.
+
+### 스프링 테스트 컨텍스트 프레임워크 적용
+
+적용 방법
+
+1. @Before 메소드에서 애플리케이션 컨텍스트 생성코드 제거
+2. ApplicationContext 타입의 인스턴스 변수 선언 후 @Autowired 애노테이션 추가
+3. 클래스 레벨에 @RunWith와 @ContextConfiguration 애노테이션 추가
+
+```jsx
+@RunWith(SpringJUnit4ClassRunner.class)
+@ContextConfiguration("/applicationContext.xml")
+public class UserDaoTest {
+    @Autowired
+    private ApplicationContext context;
+    ...
+
+		@Before
+		public void setUp( ) {
+			this.dao = this.context.getBean("userDao", UserDao.class);
+			...
+}
+```
+
+그런데 인스턴스 변수인 context는 어디에서도 초기화해주는 코드가 없다.
+
+따라서 setUp( ) 메소드에서 context를 사용하려고 하면 NullPointerException이 발생해야 하지만 context 변수에 애플리케이션 컨텍스트가 들어 있기 때문에 테스트는 아무런 문제 없이 끝난다.
+
+- RunWith : JUnit 테스트 실행 방법 확장 시 사용하는 애노테이션
+- SpringJUnit4ClassRunner : JUnit용 테스트 컨텍스트 프레임워크 확장 클래스, 테스트에서 사용할 애플리케이션 컨텍스트를 만들고 관리하는 작업을 해 줌
+- ContextConfiguration : 자동으로 만들어 줄 애플리케이션 컨텍스트의 위치를 지정
+
+### 테스트 메소드의 컨텍스트 공유
+
+setUp()에 context와 자기 자신인 this를 출력하는 코드 추가 (확인용 코드)
+
+```jsx
+@Before
+public void setUp() {
+    System.out.println("context: " + this.context);
+    System.out.println("setUp: " + this);
+}
+```
+
+setUp( ) 메소드는 @Before가 붙어 있으니 매 테스트 메소드가 실행되기 전에 한 번 씩 실행된다. 이때 인스턴스 변수인 context와 테스트 오브젝트 자신인 this를 콘솔에 출력하게 된다.
+
+```jsx
+context: org.springframework.context.support.GenericApplicationContext@4883b407
+setUp: com.david.tobysspring.user.dao.UserDaoTest@659a969b
+context: org.springframework.context.support.GenericApplicationContext@4883b407
+setUp: com.david.tobysspring.user.dao.UserDaoTest@41e1e210
+context: org.springframework.context.support.GenericApplicationContext@4883b407
+setUp: com.david.tobysspring.user.dao.UserDaoTest@625732
+```
+
+context는 세 번 모두 동일하지만, UserDaoTest 자신은 세 번 모두 새로 생성됨.
+
+- 테스트 실행 전 딱 한 번 애플리케이션 컨텍스트를 생성해두고, 테스트 오브젝트가 생성될 때마다 특별한 방법으로 애플리케이션 컨텍스트를 특정 필드에 주입
+- 일종의 DI(애플리케이션 오브젝트 사이의 관계를 관리하기 위한 DI와는 조금 다름)
+
+### 테스트 클래스의 컨텍스트 공유
+
+ - 여러 개의 테스트 클래스가 있는데 모두 같은 설정파일을 가진 애플리케이션 켄텍스트를 사용한다   면, 스프링은 테스트 클래스 사이에서도 애플리케이션 컨텍스트를 공유하게 해준다.
+
+ - 수백 개의 테스트 클래스를 만들었는데 모두 같은 설정파일을 사용한다고 해도 테스트 전체에 걸쳐 단 한 개의 애플리케이션 컨텍스트만 만들어져 사용된다. 이 덕분에 테스트 성능이 대폭 향상된다.
+
+### @Autowired
+
+@Autowired는 스프링 DI에 사용되는 특별한 애노테이션
+
+- @Autowired가 붙은 인스턴스 변수가 있으면, 테스트 컨텍스트 프레임워크는 변수 타입과 일치하는 컨텍스트 내의 빈을 찾는다.
+- 타입이 일치하는 빈이 있으면 인스턴스 변수에 주입해준다.
+- 일반적으로 생성자 또는 수정자 메소드가 필요하지만, 이 경우에는 없어도 주입이 가능하다
+
+@Autowired는 변수에 할당 가능한 타입을 가진 빈을 자동으로 찾는다. 따라서 SimpleDriverDataSource 클래스 타입은 물론이고, 인터페이스인 DataSource 타입으로 변수를 선언해도 된다.
+
+### 2.4.2 DI와 테스트
+
+UserDao와 DB 커넥션 생성 클래스 사이에 DataSource라는 인터페이스를 뒀을때 장점
+
+- UserDao는 자신이 사용하는 오브젝트의 클래스가 무엇인지 알 필요가 없음
+- DI를 통해 오브젝트를 주입받으므로 오브젝트 생성에 대한 부담이 없음
+- 코드 수정 없이 의존 오브젝트를 바꿔가면 사용할 수 있음
+- 
+
+**DataSource 인터페이스를 사용하고 DI를 통해 주입해주는 방식을 이용해야하는 이유**
+
+1. 소프트웨어 개발에서 절대로 바뀌지 않는 것은 없기 때문
+2. 클래스의 구현 방식은 바뀌지 않는다고 하더라도 인터페이스를 두고 DI를 적용하게 해두면 다른 차원의 서비스 기능을 도입할 수 있기 때문
+3. 효율적인 테스트를 손쉽게 만들기 위해서
+
+### 테스트 코드에 의한 DI
+
+기존 applicationContext.xml에 정의된 DataSource빈을 사용할 경우
+
+- 운영용 DB와 연결이 되어 있다면 deleteAll( )에 의해 운영용 DB의 사용자 정보가 모두 삭제 될수도 있다.
+- DI를 이용하여 테스트 중에 DAO가 사용할 DataSource 오브젝트를 바꿔주는 방법을 이용
+
+DataSource : SingleConnectionDataSource 사용 (스프링이 제공하는 가장 빠른 DataSource)
+
+- DBConnection을 하나만 만들어두고 계속 사용해 빠르다.
+- 다중 사용자 이용 환경에서 사용하기는 어려움
+- 순차적으로 진행되는 테스트 환경에서 이용하기 적절
+
+```jsx
+...
+@DirtiesContext
+public class UserDaoTest {
+		@Autowired
+		UserDao dao;
+
+    @Before
+    public void setUp() {
+				...
+        DataSource dataSource = new SingleConnectionDataSource(
+                "jdbc:mysql:localhost/testdb", "spring", "book", true);
+        dao.setDataSource(dataSource);
+}
+```
+
+이 방법의 장점은 XML 설정파일을 수정하지 않고도 테스트 코드를 통해 오브젝트 관계를 재구성할 수 있다는 것이다.
+
+하지만 이 방식은 이미 애플리케이션 컨텍스트에서 applicationContext.xml 파일의 설정정보를 따라 구성한 오브젝트를 가져와 의존관계를 강제로 변경했기 때문에 매우 주의해서 사용해야 한다.
+
+### 테스트를 위한 별도의 DI 설정
+
+테스트 코드에서 빈 오브젝트에 수동으로 DI하는 방법
+
+- 코드가 많아져 번거로움
+- 애플리케이션 컨텍스트를 매번 새로 만들어야 하는 부담
+
+DataSource 클래스가 빈으로 정의된 테스트 전용 설정파일을 따로 만들어두는 방법
+
+- 두가지 설정파일을 만들어 하나는 서버에서 운영용으로 사용할 DataSource를 빈으로 등록
+- 다른 하나는 테스트용 DataSource를 빈으로 등록
+- 테스트에서는 테스트 전용 설정파일을 사용
+
+적용 방법
+
+- applicationContext.xml을 복사하여 test-applicationContext.xml을 만듦
+- 다른 빈설정은 그대로 두고 dataSource 빈만 테스트용으로 변경
+- UserDaoTest의 ContextConfiguration 애노테이션의 location 엘리먼트 값을 변경
+- SetUp 메소드의 수동 DI 코드와 DirtiesContext 애노테이션 제거
+
+### 컨테이너 없는 DI 테스트
+
+스프링 컨테이너를 사용하지 않고 테스트를 만드는 방법
+
+- UserDao나 DataSource 구현 클래스에서 스프링 API를 직접 사용하거나 애플리케이션 컨텍스트를 이용하는 코드가 없으므로 스프링 DI 컨테이너에 의존하지 않아도 된다.
+- 테스트 코드에서 직접 오브젝트를 만들고 DI해서 사용해도 된다.
+- RunWith, Autowired를 사용하지 않고 직접 UserDao의 오브젝트를 생성하고 테스트용 Data 오브젝트를 만들어 직접 DI 해주면 된다.
+
+DataSource를 직접 만들어야 하지만, 애플리케이션 컨텍스트를 아예 사용하지 않으므로 코드는 더 단순해지고 이해하기 편해짐 ⇒ 어플리케이션 컨텍스트가 만들어지지 않으므로 테스트 시간을 절약
+
+**UserDao가 매번 새로 만들어지는 단점도 있음**
+
+### DI를 이용한 테스트 방법 선택
+
+**DI를 테스트에 이용하는 방법**
+
+1. **스프링 컨테이너 없이 테스트할 수 있는 방법**
+    - 1순위로 고려
+    - 테스트 수행 속도가 가장 빠르고, 테스트가 간결하다.
+2. **스프링의 설정을 이용한 DI 방식의 테스트**
+    - 여러 오브젝트와 복잡한 의존관계를 갖고 있는 오브젝트를 테스트해야 하는 경우
+    - 테스트 전용 설정 파일을 따로 만들어 사용
+3. **컨텍스트에서 DI 받은 오브젝트에서 다시 테스트 코드로 수동 DI 해서 테스트**
+    - 테스트 설정을 따로 만들었지만, 예외적으로 의존관계를 강제적으로 테스트해야 하는 경우
+    - DirtiesContext 애노테이션을 반드시 붙여주어야 한다.
+
+# 2.5 학습 테스트로 배우는 스프링
+
+자신이 만들지 않은 프레임워크나 다른 개발팀에서 만들어서 제공한 라이브러리 등에 대해서 작성한 테스트를 **학습 테스트**라고 한다.
+
+- 학습테스트의 목적
+1. 사용할 API나 프레임워크의 기능을 테스트로 보면서 사용 방법을 익히기 위함
+2. 자신이 테스트를 만들려고 하는 기술이나 기능에 대해 얼마나 제대로 알고 있는 지를 검증
+3. 빠르고 정확하게 사용법을 익히기 위함
+
+학습테스트는 테스트 대상보다 테스트 코드 자체에 관심을 가져야 한다.
+
+## 2.5.1 학습 테스트의 장점
+
+1. 다양한 조건에 따른 기능을 손쉽게 확인 가능
+    - 자동화된 테스트 코드로 만들어지기 때문에 다양한 조건에 따라 기능이 어떻게 동작하는지 빠르게 확인이 가능
+2. 학습 테스트 코드를 개발 중 참고 가능
+    - 예제를 만드는 방법의 경우 최종 수정 예제만 남게 된다.
+    - 학습 테스트는 코드를 개별적으로 만들고 남겨둘 수 있으므로 개발 중 좋은 참고 자료가 된다.
+3. 프레임워크 또는 제품 업그레이드 시 호환성 검증을 도와줌
+    - 기존에 사용하던 API가 기능에 문제가 없다는 사실을 미리 확인해 볼 수 있음.
+    - 기능에 변화가 있거나 업데이트 된 제품에 버그가 있다면, 미리 확인할 수 있음
+    - 사용법에 변화가 생긴 경우 그에 맞춰 애플리케이션 코드를 수정할 계획을 세울 수 있음
+4. 테스트 작성에 좋은 훈련이 된다.
+    - 테스트 코드 작성을 연습할 수 있다,
+    - 학습 테스트의 경우 한두 가지 간단한 기능에만 초점을 맞추면 되기 때문에 테스트도 대체로 단순하다.
+5. 새로운 기술을 공부하는 과정이 즐거워진다.
+
+## 2.5.2 학습 테스트 예제
+
+### JUnit 테스트 오브젝트 테스트
+
+JUnit은 테스트 메소드를 수행할 때마다 사로운 오브젝트를 생성한다.
+
+**JUnit으로 만드는 JUnit 자신에 대한 테스트 방법**
+
+1. 새로운 테스트 클래스를 작성
+2. 세 개의 테스트 메소드 추가
+3. 테스트 클래스 자신의 타입으로 스태틱 변수를 하나 선언
+4. 매 테스트 메소드에서 스태틱 변수에 담긴 오브젝트와 자신을 비교하여 같지 않음을 확인 후 현재 오브젝트를 스태틱 변수에 저장
+
+```jsx
+import static org.junit.matchers.JUnitMatchers.hasItem;
+
+public class JUnitTest {
+    static Set<JUnitTest> testObjects = new HashSet<JUnitTest>();
+    
+    @Test
+    public void test1() {
+        assertThat(this, is(not(sameInstance(testObject))));
+        testObject = this;
+    }
+    
+    @Test
+    public void test2() {
+        assertThat(this, is(not(sameInstance(testObject))));
+        testObject = this;
+    }
+    
+    @Test
+    public void test3() {
+        assertThat(this, is(not(sameInstance(testObject))));
+        testObject = this;
+    }
+}
+```
+
+assertThat()의 매처
+
+- not() : 뒤에 나오는 결과를 부
+- sameInstance() : 같은 오브젝트인지 비교(동일성 비교)
+
+문제점
+
+- 직전 테스트에서 만들어진 테스트 오브젝트와만 비교
+- 첫 번째, 세 번째 오브젝트가 같을 경우, 검증이 안 됨
+
+해결책
+
+1. 스태틱 변수로 테스트 오브젝트를 저장할 수 있는 컬렉션을 만듦
+2. 현재 테스트 오브젝트가 컬렉션에 이미 등록되어 있는지 확인
+3. 없으면, 자기 자신을 추가
+4. 2~3 반복
+
+### 스프링 테스트 컨텍스트 테스트
+
+스프링 테스트 컨텍스트 프레임워크에 대한 학습 테스트
+
+- 스프링 테스트용 애플리케이션 컨텍스트는 테스트 개수와 상관없이 한 개만 만들어짐
+- 생성된 컨텍스트는 모든 테스트에서 공유됨
+- 테스트용 설정파일이 필요함. applicationContext.xml이 있지만 학습 테스트는 가능하면 독립적으로 만드는 것이 좋음
+- 해당 설정파일에는 아무런 빈을 등록할 필요가 없음
+
+### 2.5.3 버그 테스트
+
+- **버그 테스트**란 코드에 오류가 있을 때 그 오류를 가장 잘 드로내줄 수 있는 테스트
+- 버그 테스트는 일단 실패하도록 만들어야하며, 버그 테스트가 성공할 수 있도록 애플리케이션 코드를 수정한다.
+
+- 버그 테스트의 필요성과 장점
+1. 테스트의 완성도를 높여준다.
+2. 버그의 내용을 명확하게 분석하게 해준다.
+3. 기술적인 문제를 해결하는 데 도움이 된다.
+
+- 동등분할
+
+    - 같은 결과를 내는 값의 범위를 구분해서 각 대표 값으로 테스트를 하는 방법을 말한다.  
+
+- 경계값 분석
+
+    - 에러는 동등분할 범위의 경계에서 주로 많이 발생한다는 특징을 이용해서 경계의 근처에 있는 값을 이용해 테스트 하는 방법
