--- a/2장 테스트/2.1 ~ 2.6.md
+++ b/2장 테스트/2.1 ~ 2.6.md
@@ -224,6 +224,9 @@ public class UserDao {
 1. '존재하지않는 id로 get( ) 메소드를 실행하면 특정한 예외가 던져져야한다'는 식으로 만들어야 할 기능을 결정
 2. UserDao 코드를 수정하는 대신 getUserFailure( ) 테스트를 먼저 만든다. ( 만들어진 코드를 보고 어떻게 테스트할까라고 생각하면서 getUserFailure( )를 만든 것이 아니라, 추가하고 싶은 기능을 코드로 표현하려고 했기 때문에 가능)
 
+
+getUserFailure( ) 테스트 코드에 나타난 기능
+
 ![getUser 테스트 코드표](https://user-images.githubusercontent.com/62732938/129339450-7b3699ee-1e4f-49ec-90e2-065cf53cb51e.png)
 
 
