--- a/6장 AOP/6.1~6.4.md
+++ b/6장 AOP/6.1~6.4.md
@@ -1,3 +1,5 @@
+# 토비의 스프링 6장 (AOP)
+
 AOP는 IoC/DI, 서비스 추상화와 더불어 스프링의 3대 기반기술의 하나다.
 
 AOP를 바르게 이용하려면 OOP를 대체하려고 하는 것처럼 보이는 AOP라는 이름 뒤에 감춰진, 그 필연적인 등장배경과 스프링이 그것을 도입한 이유, 그 적용을 통해 얻을 수 있는 장점이 무엇인지에 대한 충분한 이해가 필요하다.
